--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.2
+beautifulsoup4==4.11.1
+bs4==0.0.1
 Django==4.1.3
-sqlparse==0.4.3
-python-dotenv==0.21.0
+django-crispy-forms==1.14.0
+image==1.5.33
+lxml==4.9.1
 mysqlclient==2.1.1
-django-crispy-forms
 Pillow==9.3.0
-lxml
-bs4
-python-dateutil
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+six==1.16.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
